NEWS - user visible changes				-*- outline -*-

GnuCOBOL 3.0 to be released (201801xx)

* New GnuCOBOL features

** REPORTWRITER module added

** INDEXED file support -  added support for sparse and split keys
   (most of the compiler code was borrowed from the fileio-rewrite)

** DISPLAY ... UPON PRINTER may be redirected to an external command
   (new runtime configuration COB_DISPLAY_PRINT_PIPE) or appended to a file
   (new runtime configuration COB_DISPLAY_PRINT_FILE, which takes precedence)

** Option to dump (partial) data of modules on abort.
   Use new cobc option -fdump=<scope> to prepare the module and optional 
   use new runtime configuration options COB_DUMP_FILE and COB_DUMP_WIDTH
   to adjust the dump.

** C interface: new functions cob_set_runtime_option / cob_get_runtime_option
   to set/get special runtime options (currently FILE * for trace and printer
   output) or to reload the runtime configuration after changing environment

* Changed cobc options:

** The option -debug (runtime checks) no longer implies -ftrace (option to
   trace program flow of the generated module with COB_SET_TRACE).
   You may specify -ftrace[all] along -debug if you want to use this feature.

** The option -fif-cutoff (option to change generated C sources to use
   a label + goto for nested if/else) was deactivated to allow the C compiler
   to fully control the program flow.
   Please report if you have a need for this option as it will be removed
   permanently in GnuCOBOL 3.1 otherwise.

* Changes in the runtime

** updated exception handling, GnuCOBOL now only cleans raised exceptions when
   requested by SET LAST EXCEPTION TO OFF

** The standard-format for program tracing was changed and is now adjustable
   by the runtime configuration option COB_TRACE_FORMAT.

* New configure option --enable-debug-log to allow internal
  tracing of GnuCOBOL (intended for developers only) 


GnuCOBOL 2.2 released (20170906)

* Move to GPL/LGPL 3
