@@ -216,7 +216,7 @@ SIZE  TYPE           LVL  NAME                           PICTURE
 AT_CHECK([$UNIFY_LISTING prog.lst prog.lis once], [0], [], [])
 AT_CHECK([diff prog3.lst prog.lis], [0], [], [])
 
-AT_CHECK([$COBC $FLAGS -E prog.cob], [0], [], [])
+AT_CHECK([$COBC $FLAGS -E -o prog.i prog.cob], [0], [], [])
 AT_CHECK([$COMPILE_ONLY -t prog.lst -tlines=0 -tsymbols prog.i], [0], [], [])
 
 AT_DATA([prog4.lst],
@@ -1035,7 +1035,7 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COBC $FLAGS -E prog.cob], [0], [], [])
+AT_CHECK([$COBC $FLAGS -E -o prog.i prog.cob], [0], [], [])
 AT_CHECK([$COMPILE_ONLY -t prog.lst -tlines=0 -tsymbols prog.i], [0], [],
 [prog.cob:11: warning: numeric value is expected
 prog.cob:6: warning: 'TEST-VAR' defined here as PIC 9(2)
